modified for hook

--- a/src/library.properties
+++ b/src/library.properties
@@ -8,4 +8,4 @@ category=Communication
 architectures=esp32
 includes=
 depends=
-url=https://github.com/gosnik/EspTinyUSB
+url=https://github.com/chegewara/EspTinyUSB
